src/objects/AgreedRate__c.object
<CustomObject>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeapYear__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leap Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RetailAmount__c</fullName>
        <label>Retail Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceItem__c</fullName>
        <label>Service Item</label>
        <referenceTo>ServiceItem__c</referenceTo>
        <relationshipLabel>Agreed Rates</relationshipLabel>
        <relationshipName>AgreedRates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WholesaleAmount__c</fullName>
        <label>Wholesale Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Agreed Rate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{000000000}</displayFormat>
        <label>Agreed Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreed Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ARateServiceItemMustNotBeChanged</fullName>
        <active>true</active>
        <description>Cannot be changed once saved (warning? Something like that)</description>
        <errorConditionFormula>ISCHANGED( ServiceItem__c )</errorConditionFormula>
        <errorMessage>Service Item can not be changed once entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ARateStartDateAndEndDateMustNotBeChanged</fullName>
        <active>true</active>
        <description>Start Date and End Date Cannot be changed once saved.</description>
        <errorConditionFormula>AND( NOT(ISBLANK(PRIORVALUE(EndDate__c ))),ISCHANGED( EndDate__c )) || ISCHANGED( StartDate__c )</errorConditionFormula>
        <errorMessage>Start Date and End Date cannot be changed once entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ARateStartDateMustbeBeforeEndDate</fullName>
        <active>true</active>
        <description>Start Date must be before End Date or End Date cannot be before Start Date</description>
        <errorConditionFormula>StartDate__c &gt;= EndDate__c</errorConditionFormula>
        <errorMessage>Start Date must be before End Date.</errorMessage>
    </validationRules>
</CustomObject>